--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <title>Техномарт</title>
     <link href='https://fonts.googleapis.com/css?family=Cuprum:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
+    <link href='<link href='https://fonts.googleapis.com/css?family=PT+Sans&subset=cyrillic' rel='stylesheet' type='text/css'>'
+    <link href='https://fonts.googleapis.com/css?family=Cuprum:400,700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
@@ -12,8 +14,8 @@
     		<div class="container">
     			<a href="#" class="header-top__logo">Техномарт</a>
     			<form action="#" class="header-top__search">
-    				<input type="submit">
-            <input type="text" placeholder="Поиск">
+    				<input type="image">
+            <input type="search" placeholder="Поиск">
     			</form>
     			<ul class="header-top__panel">
     				<li>
@@ -82,16 +84,16 @@
     	<div class="container">
         <div class="main-tabs clearfix">
           <div class="main-tabs__left">
-            <div class="foto-block__buttons">
+              <div class="foto-block__buttons">
                 <span class="label">NEW</span>
                 <p>Материалы</p>
                 <a href="#" class="slogan">На любой вкус</a>
-                <img class="button__icon" src="img/Layer 92.png" width="44" height="65">
+                <img class="button__icon" src="img/fotopickhe-img.png/bucket.png" width="44" height="65">
               </div>
               <div class="foto-block__buttons">
                 <p>Инструмент</p>
                 <a href="#" class="slogan">На все случаи</a>
-                <img class="button__icon" src="img/Layer 96.png" width="75" height="61">
+                <img class="button__icon" src="img/fotopickhe-img.png/drill.png" width="75" height="61">
               </div>
               <div class="foto-block__slider">
                 <div class="slider__paginator">
@@ -120,18 +122,18 @@
             <div class="foto-block__buttons">
                 <p>Техника</p>
                 <a href="#" class="slogan">Для стройки</a>
-                <img class="button__icon" src="img/Layer 95.png" width="78" height="62">
+                <img class="button__icon" src="img/fotopickhe-img.png/tractor.png" width="78" height="62">
             </div>    
             <div class="foto-block__buttons">
                 <p>Скидки 50%</p>
                 <a href="#" class="slogan">На 350 товаров</a>
-                <img class="button__icon" src="img/Layer 100.png" height="72" width="59">
+                <img class="button__icon" src="img/fotopickhe-img.png/Tara.png" height="72" width="59">
             </div>
             <div class="foto-block__buttons">
                 <p>Доставка</p>
                 <a href="#" class="slogan">бесплатно</a>
-                <img class="button__icon" src="img/Layer 100.png" height="72" width="59">
-              </div>
+                <img class="button__icon" src="img/fotopickhe-img.png/car.png" height="63" width="78">
+            </div>
           </div>
         </div>
     		<div class="main-h2">
@@ -140,26 +142,26 @@
     		</div>
     		<div class="main-catalog__items">
     			<article class="catalog__item">
-    				<img src="img/snippet-32961 copy 3.jpg" height="164" width="184">
+    				<img src="img/catalog-img1.jpg/prod-img1.jpg" height="164" width="184">
             <a class="name-company" href="#">Перфоратор BOSCH<br>BFG 9000</a>
             <div class="item__old-price">32500 P.</div>
             <div class="item__price">25500 P.</div>
     			</article>
     			<article class="catalog__item">
-    				<img src="img/snippet-18927 copy 3.jpg" height="112" width="127">
+    				<img src="img/catalog-img1.jpg/prod-img2.jpg" height="112" width="127">
             <a class="name-company" href="#">Перфоратор BOSCH<br>BFG 3000</a>
             <div class="item__old-price">22500 P.</div>
             <div class="item__price">15500 P.</div>
     			</article>
     			<article class="catalog__item">
-    				<img src="img/snippet-945 copy 2.jpg" height="128" width="144">
+    				<img src="img/catalog-img1.jpg/prod-img3.jpg" height="128" width="144">
             <a class="name-company" href="#">Перфоратор BOSCH<br>BFG 6000</a>
             <div class="item__old-price">30500 P.</div>
             <div class="item__price">25500 P.</div>
     			</article>
     			<article class="catalog__item">
-    				<span>NEW</span>
-            <img src="img/snippet-18927 copy 3.jpg" height="112" width="127">
+    				<span class="label">NEW</span>
+            <img src="img/catalog-img1.jpg/prod-img2.jpg" height="112" width="127">
             <a class="name-company" href="#">Перфоратор BOSCH<br>BFG 2000</a>
             <div class="item__price">12500 P.</div>
     			</article>
@@ -170,28 +172,28 @@
     		</div>
     		<div class="main-manufactures">
     			<div class="main-manufactures__branded-sign">
-    				<a href="#"><img src="img/bosch.png" height="37" width="126" alt="Bosch" ></a>
+    				<a href="#"><img src="img/manufactur-img.png/manuf-img2.png" height="37" width="126" alt="Bosch" ></a>
     			</div>
     			<div class="main-manufactures__branded-sign">
-    				<a href="#"><img src="img/Makita.png" height="40" width="123" alt="Makita" ></a>
+    				<a href="#"><img src="img/manufactur-img.png/manuf-img7.png" height="40" width="123" alt="Makita" ></a>
     			</div>
     			<div class="main-manufactures__branded-sign">
-    				<a href="#"><img src="img/DeWALT.png" height="44" width="146" alt="DeWalt" ></a>
+    				<a href="#"><img src="img/manufactur-img.png/manuf-img3.png" height="44" width="146" alt="DeWalt" ></a>
     			</div>
     			<div class="main-manufactures__branded-sign">
-    				<a href="#"><img src="img/Интерскол.png" height="88" width="200" alt="Интерскол" ></a>
+    				<a href="#"><img src="img/manufactur-img.png/manuf-img5.png" height="88" width="200" alt="Интерскол" ></a>
     			</div>
     			<div class="main-manufactures__branded-sign">
-    				<a href="#"><img src="img/Hitachi.png" height="31" width="169" alt="HITACHI" ></a>
+    				<a href="#"><img src="img/manufactur-img.png/manuf-img4.png" height="31" width="169" alt="HITACHI" ></a>
     			</div>
     			<div class="main-manufactures__branded-sign">
-    				<a href="#"><img src="img/LG.png" height="73" width="121" alt="LG" ></a>
+    				<a href="#"><img src="img/manufactur-img.png/manuf-img6.png" height="73" width="121" alt="LG" ></a>
     			</div>
     			<div class="main-manufactures__branded-sign">
-    				<a href="#"><img src="img/AEG.png" height="96" width="151" alt="AEG" ></a>
+    				<a href="#"><img src="img/manufactur-img.png/manuf-img1.png" height="96" width="151" alt="AEG" ></a>
     			</div>
     			<div class="main-manufactures__branded-sign">
-    				<a href="#"><img src="img/Metabo.png" height="69" width="204" alt="METABO" ></a>
+    				<a href="#"><img src="img/manufactur-img.png/manuf-img8.png" height="69" width="204" alt="METABO" ></a>
     			</div>
     		</div>
     	</div>	
@@ -207,20 +209,20 @@
               <a href="#">Кредит</a>
     				</div>
             <div class="services__items">
-    				  <div class="services__item">
+    				  <div class="services__item clearfix">
     					  <h2>ДОСТАВКА</h2>
                 <p>Мы с удовольствием доставим ваш товар прямо<br>к вашему подъезду совершенно бесплатно!<br>Ведь мы неплохо заработаем,<br>поднимая его на ваш на этаж!</p>
-                <img src="img/Layer 131.png" height="146" width="206">
+                <img src="img/shipping.png" height="146" width="206">
     				  </div>
     				  <div class="services__item">
     					  <h2>ДОСТАВКА</h2>
                 <p>Мы с удовольствием доставим ваш товар прямо<br>к вашему подъезду совершенно бесплатно!<br>Ведь мы неплохо заработаем,<br>поднимая его на ваш на этаж!</p>
-                <img src="img/Layer 131.png" height="146" width="206">
+                <img src="img/shipping.png" height="146" width="206">
     				  </div>
     				  <div class="services__item">
     					  <h2>ДОСТАВКА</h2>
                 <p>Мы с удовольствием доставим ваш товар прямо<br>к вашему подъезду совершенно бесплатно!<br>Ведь мы неплохо заработаем,<br>поднимая его на ваш на этаж!</p>
-                <img src="img/Layer 131.png" height="146" width="206">
+                <img src="img/shipping.png" height="146" width="206">
     				  </div>
             </div>
     			</div>
@@ -242,22 +244,22 @@
                     <a href="#">ЖелДорЭкспедиция</a>
                   </li>
                 </ul>
-                  <a href="#">ПОДРОБНЕЕ О КОМПАНИИ</a>
+                  <a class="btn-compani" href="#">ПОДРОБНЕЕ О КОМПАНИИ</a>
     			    </div>
     			    <div class="main__right-block">
     			    	<h2>КОНТАКТЫ</h2>
                 <p>Вы можете забрать товар сами,<br>Заехав в наш офис:</p>
-                <img src="img/Слой 5.png" height="158" width="300" ait="Карта">
+                <img src="img/map.png" height="158" width="300" ait="Карта">
                 <a href="#">ЗАБЛУДИЛИСЬ? НАПИШИТЕ НАМ!</a>
     			    </div>
     			</div>
     		</section>
     </main>
-    <footer class="main-footer clearfix">
-        <div class="container">
+    <footer class="main-footer">
+        <div class="container  clearfix">
      		<div class="contact-information">
      			<a href="#" class="contact-information__logo">Техномарт</a>
-     			<div class="contact-information__address">г. Санкт-Петербург, ул.Б.Конюшенная, д.19.8<br>+7 (812) 555-05-55</div>
+     			<div class="contact-information__address">г. Санкт-Петербург, ул.Б.<br>Конюшенная, д.19.8</div>
      		</div>
      		<div class="main-footer__menu clearfix">
      			<div class="main-footer__menu__top">
@@ -297,17 +299,20 @@
      			</div>
      		</div>
         </div>
-        <div class="bottom-footer">
+        <div class="bottom-footer clearfix">
      		<div class="container">
      			<div class="bottom-footer__informaition">
      				<p>2010-2016 Компания "Техномарт"<br>
             Все права защищены</p>
      			</div>
      			<div class="informaition__share">
-     				<b>Соцсети</b>
             <a class="social social-vk" href="#"></a>
             <a class="social social-fb" href="#"></a>
             <a class="social social-in" href="#"></a>
+     				<!--<a class="social social-vk" href="#"></a>
+            <a class="social social-fb" href="#"></a>
+            <a class="social social-in" href="#"></a>
+            !-->
      			</div>
      			<div class="informaition__contact">
      				<p>Обратная связь:</p>
