еще немного нароботок

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link href='https://fonts.googleapis.com/css?family=Cuprum:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
     <link href='<link href='https://fonts.googleapis.com/css?family=PT+Sans&subset=cyrillic' rel='stylesheet' type='text/css'>'
     <link href='https://fonts.googleapis.com/css?family=Cuprum:400,700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=PT+Sans:400,700&subset=cyrillic' rel='stylesheet' type='text/css'>
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
@@ -42,14 +43,18 @@
     				    <a href="#"><i class="icon-enter"></i>Войти</a>
                 <a href="#">Регистрация</a>
     			    </div>
-    			    <!--<ul class="header-middle__data">
-    				    <li>
-       	          <a href="#">Мои заказы</a>
-                </li>
-                <li>
-       	          <a href="#">Личный кабинет</a>
-                </li>
-    			    </ul>!-->
+    			    <!--<div class="header-middle__users">
+                  <p>Равшан Джамшутович</p> 
+                  <a href="#" class="icon-logout"></a>  
+                </div> 
+                  <ul class="header-middle__data">
+                    <li>
+                      <a href="#">Мои заказы</a>
+                    </li>
+                    <li>
+                      <a href="#">Личный кабинет</a>
+                    </li>
+                  </ul> -->
     			</div>
     		</div>
     		<nav class="main-navigation clearfix">
@@ -309,10 +314,6 @@
             <a class="social social-vk" href="#"></a>
             <a class="social social-fb" href="#"></a>
             <a class="social social-in" href="#"></a>
-     				<!--<a class="social social-vk" href="#"></a>
-            <a class="social social-fb" href="#"></a>
-            <a class="social social-in" href="#"></a>
-            !-->
      			</div>
      			<div class="informaition__contact">
      				<p>Обратная связь:</p>
