часть страницы inner

--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
     <title>Техномарт</title>
     <link href='https://fonts.googleapis.com/css?family=Cuprum:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
     <link href='<link href='https://fonts.googleapis.com/css?family=PT+Sans&subset=cyrillic' rel='stylesheet' type='text/css'>'
-    <link href='https://fonts.googleapis.com/css?family=Cuprum:400,700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=PT+Sans:400,700&subset=cyrillic' rel='stylesheet' type='text/css'>
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
@@ -57,9 +55,9 @@
                   </ul> -->
     			</div>
     		</div>
-    		<nav class="main-navigation clearfix">
-          <div class="container">
-    			  <ul>
+        <div class="container">
+    		  <nav class="main-navigation clearfix">
+            <ul>
               <li>
                 <a href="#">Главная</a>
               </li>
@@ -82,8 +80,8 @@
                 <a href="#">Контакты</a>
             </li>
             </ul>
-          </div>
-    		</nav>
+          </nav>
+        </div>
     </header>
     <main class="main-content">
     	<div class="container">
@@ -213,8 +211,8 @@
               <a href="#">Гарантия</a>
               <a href="#">Кредит</a>
     				</div>
-            <div class="services__items">
-    				  <div class="services__item clearfix">
+            <div class="services__items clearfix">
+    				  <div class="services__item ">
     					  <h2>ДОСТАВКА</h2>
                 <p>Мы с удовольствием доставим ваш товар прямо<br>к вашему подъезду совершенно бесплатно!<br>Ведь мы неплохо заработаем,<br>поднимая его на ваш на этаж!</p>
                 <img src="img/shipping.png" height="146" width="206">
