декоративка за сегодня

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Техномарт</title>
     <link href='https://fonts.googleapis.com/css?family=Cuprum:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
-    <link href='<link href='https://fonts.googleapis.com/css?family=PT+Sans&subset=cyrillic' rel='stylesheet' type='text/css'>'
+    <link href='https://fonts.googleapis.com/css?family=PT+Sans&subset=cyrillic' rel='stylesheet' type='text/css'>'
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
@@ -13,7 +13,7 @@
     		<div class="container">
     			<a href="#" class="header-top__logo">Техномарт</a>
     			<form action="#" class="header-top__search">
-    				<input type="image">
+    				<input type="text">
             <input type="search" placeholder="Поиск">
     			</form>
     			<ul class="header-top__panel">
@@ -41,18 +41,6 @@
     				    <a href="#"><i class="icon-enter"></i>Войти</a>
                 <a href="#">Регистрация</a>
     			    </div>
-    			    <!--<div class="header-middle__users">
-                  <p>Равшан Джамшутович</p> 
-                  <a href="#" class="icon-logout"></a>  
-                </div> 
-                  <ul class="header-middle__data">
-                    <li>
-                      <a href="#">Мои заказы</a>
-                    </li>
-                    <li>
-                      <a href="#">Личный кабинет</a>
-                    </li>
-                  </ul> -->
     			</div>
     		</div>
         <div class="container">
@@ -101,6 +89,9 @@
               <div class="foto-block__slider">
                 <div class="slider__paginator">
                   <a class="prev" href="#prev">Назад</a>
+                  <i class="activ"></i>
+                    <i></i>
+                    <i></i>
                   <a class="next" href="#next">Вперёд</a>
                 </div>
                 <div class="slider__items">
