--- a/inner.html
+++ b/inner.html
@@ -4,7 +4,7 @@
       <meta charset="utf-8">
       <title>Техномарт</title>
       <link href='https://fonts.googleapis.com/css?family=Cuprum:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
-      <link href='<link href='https://fonts.googleapis.com/css?family=PT+Sans&subset=cyrillic' rel='stylesheet' type='text/css'>'
+      <link href='https://fonts.googleapis.com/css?family=PT+Sans&subset=cyrillic' rel='stylesheet' type='text/css'>'
       <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
@@ -131,10 +131,10 @@
               <div class="crease"></div> 
               <div class="maker__group">
                  <h3>Питание:</h3>
-                 <input type="radio" name="battery" value="accumulator" checked>АККУМУЛЯТОРНЫЕ
-                 <input type="radio" name="battery" value="network">СЕТЕВЫЕ
+                 <input type="radio" name="battery" value="accumulator" checked id="rd1"><label for="rd1">АККУМУЛЯТОРНЫЕ</label>
+                 <input type="radio" name="battery" value="network" id="rd2"><label for="rd2">СЕТЕВЫЕ</label>
               </div>
-                 <button class="btn btn-filter" type="submit">ПОКАЗАТЬ</button>
+                 <button class="btn-filter" type="submit">ПОКАЗАТЬ</button>
             </form>
             </div>
             <div class="catalog-content">
@@ -162,7 +162,7 @@
                   <a class="buy" href="#">КУПИТЬ</a>
                   <a class="bookmark" href="#">В ЗАКЛАДКИ</a>
                 </div>
-                <img src="img/catalog-img1.jpg/prod-img2.jpg" height="112" width="127">
+                <div class="foto-prodact"><img src="img/catalog-img1.jpg/prod-img2.jpg" height="112" width="127"></div>
                 <a href="#">Перфоратор BOSCH<br>BFG 3000</a>
                 <div class="item__old-price">22500 P.</div>
                 <div class="item__price">15500 P.</div>
@@ -179,8 +179,8 @@
               </article>
               <article class="catalog-list__item">
                 <div class="item__hidden">
-                  <a href="#">КУПИТЬ</a>
-                  <a href="#">В ЗАКЛАДКИ</a>
+                  <a class="buy" href="#">КУПИТЬ</a>
+                  <a class="bookmark" href="#">В ЗАКЛАДКИ</a>
                 </div>
                 <div class="flag flag-new">новинка</div>
                 <img src="img/catalog-img1.jpg/prod-img2.jpg" height="112" width="127">
@@ -189,8 +189,8 @@
               </article>
               <article class="catalog-list__item">
                 <div class="item__hidden">
-                  <a href="#">КУПИТЬ</a>
-                  <a href="#">В ЗАКЛАДКИ</a>
+                  <a class="buy" href="#">КУПИТЬ</a>
+                  <a class="bookmark" href="#">В ЗАКЛАДКИ</a>
                 </div>
                 <img src="img/catalog-img1.jpg/prod-img2.jpg" height="112" width="127">
                 <a href="#">Перфоратор BOSCH<br>BFG 3000</a>
@@ -199,8 +199,8 @@
               </article>
               <article class="catalog-list__item">
                 <div class="item__hidden">
-                  <a href="#">КУПИТЬ</a>
-                  <a href="#">В ЗАКЛАДКИ</a>
+                  <a class="buy" href="#">КУПИТЬ</a>
+                  <a class="bookmark" href="#">В ЗАКЛАДКИ</a>
                 </div>
                 <div class="flag flag-new">новинка</div>
                 <img src="img/catalog-img1.jpg/prod-img3.jpg" height="128" width="144">
@@ -210,8 +210,8 @@
               </article>
               <article class="catalog-list__item">
                 <div class="item__hidden">
-                  <a href="#">КУПИТЬ</a>
-                  <a href="#">В ЗАКЛАДКИ</a>
+                  <a class="buy" href="#">КУПИТЬ</a>
+                  <a class="bookmark" href="#">В ЗАКЛАДКИ</a>
                 </div>
                 <img src="img/catalog-img1.jpg/prod-img2.jpg" height="112" width="127">
                 <a href="#">Перфоратор BOSCH<br>BFG 2000</a>
@@ -219,8 +219,8 @@
               </article>
               <article class="catalog-list__item">
                 <div class="item__hidden">
-                  <a href="#">КУПИТЬ</a>
-                  <a href="#">В ЗАКЛАДКИ</a>
+                  <a class="buy"href="#">КУПИТЬ</a>
+                  <a class="bookmark" href="#">В ЗАКЛАДКИ</a>
                 </div>
                 <div class="flag flag-new">новинка</div>
                 <img src="img/catalog-img1.jpg/prod-img2.jpg" height="112" width="127">
@@ -230,7 +230,7 @@
               </article>
               <article class="catalog-list__item">
                 <div class="item__hidden">
-                  <a href="#">КУПИТЬ</a>
+                  <a class="bookmark" class="buy"href="#">КУПИТЬ</a>
                   <a href="#">В ЗАКЛАДКИ</a>
                 </div>
                 <img src="img/catalog-img1.jpg/prod-img3.jpg" height="128" width="144">
@@ -240,8 +240,8 @@
               </article>
               <article class="catalog-list__item">
                 <div class="item__hidden">
-                  <a href="#">КУПИТЬ</a>
-                  <a href="#">В ЗАКЛАДКИ</a>
+                  <a class="buy"href="#">КУПИТЬ</a>
+                  <a class="bookmark" href="#">В ЗАКЛАДКИ</a>
                 </div>
                 <img src="img/catalog-img1.jpg/prod-img2.jpg" height="112" width="127">
                 <a href="#">Перфоратор BOSCH<br>BFG 2000</a>
