еще сегодняшние доработки

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Техномарт</title>
     <link href='https://fonts.googleapis.com/css?family=Cuprum:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=PT+Sans&subset=cyrillic' rel='stylesheet' type='text/css'>'
+    <link href='https://fonts.googleapis.com/css?family=PT+Sans&subset=cyrillic' rel='stylesheet' type='text/css'>
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
@@ -13,12 +13,12 @@
     		<div class="container">
     			<a href="#" class="header-top__logo">Техномарт</a>
     			<form action="#" class="header-top__search">
-    				<input type="text">
+    				<input type="submit">
             <input type="search" placeholder="Поиск">
     			</form>
     			<ul class="header-top__panel">
     				<li>
-              <a class="header-top__bookmark" href="#top">Закладки:0</a>
+              <a class="header-top__bookmark" href="#top">Закладки: 0</a>
             </li>
             <li>
               <a class="header-top__basket" href="#">Корзина</a>
