все что сделано за сегодня

--- a/inner.html
+++ b/inner.html
@@ -13,7 +13,7 @@
         <div class="container clearfix">
           <a href="#" class="header-top__logo">Техномарт</a>
           <form action="#" class="header-top__search">
-            <input type="image">
+            <input type="submit">
             <input type="search" placeholder="Поиск">
           </form>
           <ul class="header-top__panel">
@@ -37,10 +37,6 @@
             <p>г. Санкт-петербург, ул. Б. Конюшенная, д.19/8</p>
           </div>
           <div class="header-middle__making">
-              <!--<div class="header-middle__user">
-                <a href="#"><i class="icon-enter"></i>Войти</a>
-                <a href="#">Регистрация</a>
-              </div>-->
               <div class="header-middle__users">
                   <p>Равшан Джамшутович</p> 
                   <a href="#" class="icon-logout"></a>  
@@ -88,7 +84,7 @@
           <div class="breadcrumbs">
             <ul>
               <li>
-                <a href="#" name="icon"><img src="img/icon-home.png" width="15"height="12" alt="Главная страница"></a> 
+                <a href="#" name="icon"><img src="img/icon-exit.png/sprite.png" width="15"height="12" alt="Главная страница"></a> 
               </li>
               <li>
                 <a href="#">Каталог</a>
@@ -158,92 +154,92 @@
               </div>
               <div class="catalog-list clearfix">
               <article class="catalog-list__item">
-                <div class="item__hidden">
+                <div class="item__actions">
                   <a class="buy" href="#">КУПИТЬ</a>
                   <a class="bookmark" href="#">В ЗАКЛАДКИ</a>
                 </div>
-                <div class="foto-prodact"><img src="img/catalog-img1.jpg/prod-img2.jpg" height="112" width="127"></div>
+                <div class="image"><img src="img/catalog-img1.jpg/prod-image2.jpg" height="168" width="218"></div>
                 <a href="#">Перфоратор BOSCH<br>BFG 3000</a>
                 <div class="item__old-price">22500 P.</div>
                 <div class="item__price">15500 P.</div>
               </article>
               <article class="catalog-list__item">
-                <div class="item__hidden">
+                <div class="item__actions">
                   <a class="buy" href="#">КУПИТЬ</a>
                   <a class="bookmark" href="#">В ЗАКЛАДКИ</a>
                 </div>
-                <img src="img/catalog-img1.jpg/prod-img3.jpg" height="128" width="144">
+                <div class="image"><img src="img/catalog-img1.jpg/prod-image3.jpg" height="168" width="218"></div>
                 <a href="#">Перфоратор BOSCH<br>BFG 6000</a>
                 <div class="item__old-price">30500 P.</div>
                 <div class="item__price">25500 P.</div>
               </article>
               <article class="catalog-list__item">
-                <div class="item__hidden">
+                <div class="item__actions">
                   <a class="buy" href="#">КУПИТЬ</a>
                   <a class="bookmark" href="#">В ЗАКЛАДКИ</a>
                 </div>
                 <div class="flag flag-new">новинка</div>
-                <img src="img/catalog-img1.jpg/prod-img2.jpg" height="112" width="127">
+                <div class="image"><img src="img/catalog-img1.jpg/prod-image2.jpg" height="168" width="218"></div>
                 <a href="#">Перфоратор BOSCH<br>BFG 2000</a>
                 <div class="item__price">12500 P.</div>
               </article>
               <article class="catalog-list__item">
-                <div class="item__hidden">
+                <div class="item__actions">
                   <a class="buy" href="#">КУПИТЬ</a>
                   <a class="bookmark" href="#">В ЗАКЛАДКИ</a>
                 </div>
-                <img src="img/catalog-img1.jpg/prod-img2.jpg" height="112" width="127">
+                <div class="image"><img src="img/catalog-img1.jpg/prod-image2.jpg" height="168" width="218"></div>
                 <a href="#">Перфоратор BOSCH<br>BFG 3000</a>
                 <div class="item__old-price">22500 P.</div>
                 <div class="item__price">15500 P.</div>
               </article>
               <article class="catalog-list__item">
-                <div class="item__hidden">
+                <div class="item__actions">
                   <a class="buy" href="#">КУПИТЬ</a>
                   <a class="bookmark" href="#">В ЗАКЛАДКИ</a>
                 </div>
                 <div class="flag flag-new">новинка</div>
-                <img src="img/catalog-img1.jpg/prod-img3.jpg" height="128" width="144">
+                <div class="image"><img src="img/catalog-img1.jpg/prod-image3.jpg" height="168" width="218"></div>
                 <a href="#">Перфоратор BOSCH<br>BFG 6000</a>
                 <div class="item__old-price">30500 P.</div>
                 <div class="item__price">25500 P.</div>
               </article>
               <article class="catalog-list__item">
-                <div class="item__hidden">
+                <div class="item__actions">
                   <a class="buy" href="#">КУПИТЬ</a>
                   <a class="bookmark" href="#">В ЗАКЛАДКИ</a>
                 </div>
-                <img src="img/catalog-img1.jpg/prod-img2.jpg" height="112" width="127">
+                <div class="image"><img src="img/catalog-img1.jpg/prod-image2.jpg" height="168" width="218"></div>
                 <a href="#">Перфоратор BOSCH<br>BFG 2000</a>
                 <div class="item__price">12500 P.</div>
               </article>
               <article class="catalog-list__item">
-                <div class="item__hidden">
+                <div class="item__actions">
                   <a class="buy"href="#">КУПИТЬ</a>
                   <a class="bookmark" href="#">В ЗАКЛАДКИ</a>
                 </div>
                 <div class="flag flag-new">новинка</div>
-                <img src="img/catalog-img1.jpg/prod-img2.jpg" height="112" width="127">
+                <div class="image"><img src="img/catalog-img1.jpg/prod-image2.jpg" height="168" width="218"></div>
                 <a href="#">Перфоратор BOSCH<br>BFG 3000</a>
                 <div class="item__old-price">22500 P.</div>
                 <div class="item__price">15500 P.</div>
               </article>
               <article class="catalog-list__item">
-                <div class="item__hidden">
-                  <a class="bookmark" class="buy"href="#">КУПИТЬ</a>
-                  <a href="#">В ЗАКЛАДКИ</a>
+                <div class="item__actions">
+                  <a class="buy" href="#">КУПИТЬ</a>
+                  <a class="bookmark" href="#">В ЗАКЛАДКИ</a>
                 </div>
-                <img src="img/catalog-img1.jpg/prod-img3.jpg" height="128" width="144">
+                <div class="image"><img src="img/catalog-img1.jpg/prod-image3.jpg" height="168" width="218"></div>
                 <a href="#">Перфоратор BOSCH<br>BFG 6000</a>
                 <div class="item__old-price">30500 P.</div>
                 <div class="item__price">25500 P.</div>
               </article>
               <article class="catalog-list__item">
-                <div class="item__hidden">
-                  <a class="buy"href="#">КУПИТЬ</a>
+                <div class="item__actions">
+                  <a class="buy" href="#">КУПИТЬ</a>
                   <a class="bookmark" href="#">В ЗАКЛАДКИ</a>
                 </div>
-                <img src="img/catalog-img1.jpg/prod-img2.jpg" height="112" width="127">
+                <div class="image"><img src="img/catalog-img1.jpg/prod-image2.jpg" height="168" width="218"></div>
                 <a href="#">Перфоратор BOSCH<br>BFG 2000</a>
                 <div class="item__price">12500 P.</div>
               </article>
