--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <div class="main-tabs clearfix">
           <div class="main-tabs__left">
               <div class="foto-block__buttons">
-                <span class="label">NEW</span>
+                <div class="label">новинка</div>
                 <p>Материалы</p>
                 <a href="#" class="slogan">На любой вкус</a>
                 <img class="button__icon" src="img/fotopickhe-img.png/bucket.png" width="44" height="65">
@@ -136,26 +136,26 @@
     		</div>
     		<div class="main-catalog__items">
     			<article class="catalog__item">
-    				<img src="img/catalog-img1.jpg/prod-img1.jpg" height="164" width="184">
+    				<div class="image"><img src="img/catalog-img1.jpg/prod-image1.jpg" height="168" width="218"></div>
             <a class="name-company" href="#">Перфоратор BOSCH<br>BFG 9000</a>
             <div class="item__old-price">32500 P.</div>
             <div class="item__price">25500 P.</div>
     			</article>
     			<article class="catalog__item">
-    				<img src="img/catalog-img1.jpg/prod-img2.jpg" height="112" width="127">
+    				<div class="image"><img src="img/catalog-img1.jpg/prod-image2.jpg" height="168" width="218"></div>
             <a class="name-company" href="#">Перфоратор BOSCH<br>BFG 3000</a>
             <div class="item__old-price">22500 P.</div>
             <div class="item__price">15500 P.</div>
     			</article>
     			<article class="catalog__item">
-    				<img src="img/catalog-img1.jpg/prod-img3.jpg" height="128" width="144">
+    				<div class="image"><img src="img/catalog-img1.jpg/prod-image3.jpg" height="168" width="218"></div>
             <a class="name-company" href="#">Перфоратор BOSCH<br>BFG 6000</a>
             <div class="item__old-price">30500 P.</div>
             <div class="item__price">25500 P.</div>
     			</article>
     			<article class="catalog__item">
     				<span class="label">NEW</span>
-            <img src="img/catalog-img1.jpg/prod-img2.jpg" height="112" width="127">
+            <div class="image"><img src="img/catalog-img1.jpg/prod-image2.jpg" height="168" width="218"></div>
             <a class="name-company" href="#">Перфоратор BOSCH<br>BFG 2000</a>
             <div class="item__price">12500 P.</div>
     			</article>
@@ -166,28 +166,28 @@
     		</div>
     		<div class="main-manufactures">
     			<div class="main-manufactures__branded-sign">
-    				<a href="#"><img src="img/manufactur-img.png/manuf-img2.png" height="37" width="126" alt="Bosch" ></a>
+    				<a href="#"><img src="img/manufactur-img.jpg/manuf-img1.jpg" height="105" width="180" alt="Bosch" ></a>
     			</div>
     			<div class="main-manufactures__branded-sign">
-    				<a href="#"><img src="img/manufactur-img.png/manuf-img7.png" height="40" width="123" alt="Makita" ></a>
+    				<a href="#"><img src="img/manufactur-img.jpg/manuf-img2.jpg" height="105" width="180" alt="Makita" ></a>
     			</div>
     			<div class="main-manufactures__branded-sign">
-    				<a href="#"><img src="img/manufactur-img.png/manuf-img3.png" height="44" width="146" alt="DeWalt" ></a>
+    				<a href="#"><img src="img/manufactur-img.jpg/manuf-img3.jpg" height="105" width="180" alt="DeWalt" ></a>
     			</div>
     			<div class="main-manufactures__branded-sign">
-    				<a href="#"><img src="img/manufactur-img.png/manuf-img5.png" height="88" width="200" alt="Интерскол" ></a>
+    				<a href="#"><img src="img/manufactur-img.jpg/manuf-img4.jpg" height="105" width="180" alt="Интерскол" ></a>
     			</div>
     			<div class="main-manufactures__branded-sign">
-    				<a href="#"><img src="img/manufactur-img.png/manuf-img4.png" height="31" width="169" alt="HITACHI" ></a>
+    				<a href="#"><img src="img/manufactur-img.jpg/manuf-img5.jpg" height="105" width="180" alt="HITACHI" ></a>
     			</div>
     			<div class="main-manufactures__branded-sign">
-    				<a href="#"><img src="img/manufactur-img.png/manuf-img6.png" height="73" width="121" alt="LG" ></a>
+    				<a href="#"><img src="img/manufactur-img.jpg/manuf-img6.jpg" height="105" width="180" alt="LG" ></a>
     			</div>
     			<div class="main-manufactures__branded-sign">
-    				<a href="#"><img src="img/manufactur-img.png/manuf-img1.png" height="96" width="151" alt="AEG" ></a>
+    				<a href="#"><img src="img/manufactur-img.jpg/manuf-img7.jpg" height="105" width="180" alt="AEG" ></a>
     			</div>
     			<div class="main-manufactures__branded-sign">
-    				<a href="#"><img src="img/manufactur-img.png/manuf-img8.png" height="69" width="204" alt="METABO" ></a>
+    				<a href="#"><img src="img/manufactur-img.jpg/manuf-img8.jpg" height="105" width="180" alt="METABO" ></a>
     			</div>
     		</div>
     	</div>	
@@ -206,17 +206,21 @@
     				  <div class="services__item ">
     					  <h2>ДОСТАВКА</h2>
                 <p>Мы с удовольствием доставим ваш товар прямо<br>к вашему подъезду совершенно бесплатно!<br>Ведь мы неплохо заработаем,<br>поднимая его на ваш на этаж!</p>
-                <img src="img/shipping.png" height="146" width="206">
+                <img src="img/services-img.png/shedow.png" class="shedow">
+                <img src="img/services-img.png/shipping.png" height="146" width="206" class="figure">
     				  </div>
     				  <div class="services__item">
-    					  <h2>ДОСТАВКА</h2>
-                <p>Мы с удовольствием доставим ваш товар прямо<br>к вашему подъезду совершенно бесплатно!<br>Ведь мы неплохо заработаем,<br>поднимая его на ваш на этаж!</p>
-                <img src="img/shipping.png" height="146" width="206">
+    					  <h2>ГАРАНТИЯ</h2>
+                <p>Если купленный у нас товар поломается или заискрит,<br>а также в случае пожара, справоцированного его возгаранием,<br>вы всегда можете быть уверены в нашей гарантии. Мы обменяем<br>сгоревший товар на новый.<br>Дом уже востановите как-нибудь сами.</p>
+                <img src="img/services-img.png/shedow.png" class="shedow">
+                <img src="img/services-img.png/100.png" height="146" width="206" class="figure">
     				  </div>
     				  <div class="services__item">
-    					  <h2>ДОСТАВКА</h2>
-                <p>Мы с удовольствием доставим ваш товар прямо<br>к вашему подъезду совершенно бесплатно!<br>Ведь мы неплохо заработаем,<br>поднимая его на ваш на этаж!</p>
-                <img src="img/shipping.png" height="146" width="206">
+    					  <h2>КРЕДИТ</h2>
+                <p>Залесть в долговую яму стало проще!<br>Кредитные консультанты придут вам на помощь.</p>
+                <a href="#" class="application">отправить заявку</a>
+                <img src="img/services-img.png/shedow.png" class="shedow">
+                <img src="img/services-img.png/mani.png" height="146" width="206" class="figure">
     				  </div>
             </div>
     			</div>
