--- a/index.html
+++ b/index.html
@@ -89,9 +89,12 @@
               <div class="foto-block__slider">
                 <div class="slider__paginator">
                   <a class="prev" href="#prev">Назад</a>
-                  <i class="activ"></i>
-                    <i></i>
-                    <i></i>
+                  <input type="radio" id="btn-1" name="toggle">
+                  <input ype="radio" id="btn-2" name="toggle">
+                  <div class="slider-controls">
+                    <label for="btn-1"></label>
+                    <label for="btn-2"></label>
+                  </div>
                   <a class="next" href="#next">Вперёд</a>
                 </div>
                 <div class="slider__items">
