--- a/inner.html
+++ b/inner.html
@@ -4,7 +4,8 @@
       <meta charset="utf-8">
       <title>Техномарт</title>
       <link href='https://fonts.googleapis.com/css?family=Cuprum:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
-      <link href='https://fonts.googleapis.com/css?family=PT+Sans&subset=cyrillic' rel='stylesheet' type='text/css'>'
+      <link href='https://fonts.googleapis.com/css?family=PT+Sans&subset=cyrillic' rel='stylesheet' type='text/css'>
+      <link rel="stylesheet" href="css/normalize.css">
       <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
